# Group-5-System-Keiko

./: .gitignore  Cargo.toml  Makefile.toml  README.md  flake.nix  package-lock.json  package.json  pnpm-lock.yaml  rust-toolchain.toml
.github/workflows/: nextjs.yml  rust.yml
api/backend/src/: main.rs
api/db/: schema.sql
api/lib/: Cargo.toml
api/lib/src/: flashcards.rs  health.rs  lib.rs
api/lib/src/card_stack/: postgres_card_stack.rs
api/shuttle/: Cargo.toml
api/shuttle/src/: main.rs
backend/actix-api/: Cargo.toml
backend/actix-api/src/: main.rs
backend/actix-main/: Cargo.toml
backend/actix-main/src/: main.rs
backend/db/: schema.sql
backend/lib/: Cargo.toml
backend/lib/src/: card.rs  course.rs  courses.rs  flashcards.rs  lib.rs
backend/lib/src/card_stack/: mod.rs  postgres_card_stack.rs
backend/lib/src/cards_api/: mod.rs  postgres_cards.rs
backend/lib/src/courses_api/: mod.rs  postgres_courses.rs
backend/lib/src/quiz_api/: mod.rs  postgres_quizzes.rs
backend/ntex-keiko/: Cargo.toml
backend/ntex-keiko/src/: main.rs
backend/routes/: Cargo.toml
backend/routes/src/: card.rs  course.rs  health.rs  lib.rs  quiz.rs  schema.sql
backend/routes/src/card_api/: mod.rs  schema.rs
backend/routes/src/course_api/: mod.rs  schema.rs
backend/routes/src/quiz_api/: mod.rs  schema.rs
frontend/: eslint.config.mjs  next.config.ts  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.ts
frontend/src/: App.tsx
frontend/src/app/: globals.css  layout.tsx  page.tsx  providers.tsx  query-client.ts
frontend/src/app/analytics/: page.tsx
frontend/src/app/analytics/[course_code]/: page.tsx
frontend/src/app/courses/: courses.tsx  page.tsx
frontend/src/app/dashboard/: components.tsx  dashboard.tsx  loading.tsx  page.tsx
frontend/src/app/help/: page.tsx
frontend/src/app/manage/: manage.tsx  page.tsx
frontend/src/app/manage/[course_code]/: page.tsx
frontend/src/app/quiz/: page.tsx  quiz.tsx
frontend/src/app/quiz/[course_code]/: page.tsx
frontend/src/app/quiz/[id]/: page.tsx
frontend/src/app/quiz/[quiz_id]/: page.tsx
frontend/src/app/reports/: page.tsx  reports.tsx
frontend/src/app/reports/[course_code]/: loading.tsx  page.tsx
frontend/src/app/review/: page.tsx  review.tsx
frontend/src/app/review/[course_code]/: page.tsx
frontend/src/app/review/[id]/: page.tsx
frontend/src/app/review/[quiz_id]/: loading.tsx  page.tsx
frontend/src/components/: Flashcard.tsx  cards.tsx  flashcard.tsx  status.tsx
frontend/src/components/ui/: card.tsx  progress.tsx  sidebar.tsx  toaster.tsx
frontend/src/lib/: api.ts  flashcard-api.ts
frontend/src/pages/: CardManagement.tsx
frontend/src/store/: time.ts
shared/: Cargo.toml
shared/src/: models.rs
