[package]
name = "shared"
version = "0.1.0"
edition = "2021"

[dependencies]
uuid = { version = "1.10.0", features = ["v4"] }
chrono = "0.4.38"
serde = { version = "1.0", features = ["derive"] }
sqlx = { version = "0.8.2", optional = true, default-features = false, features = [
    "tls-native-tls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "json",
] }

[features]
backend = ["sqlx"]
