[package]
name = "api-lib"
version = "0.1.0"
edition = "2021"

[dependencies]
shared = { path = "../../shared", features = ["backend"] }
actix-web = "4.9.0"
sqlx = { version = "0.8.2", default-features = false, features = [
    "tls-native-tls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "json",
] }
tracing = "0.1"
serde = "1.0"
serde_json = "1.0"
async-trait = "0.1.82"
uuid = { version = "1.3.4", features = ["serde", "v4", "js"] }