[package]
name = "cs121-flashcards-app"
version = "0.1.0"
edition = "2021"

[dependencies]
api-lib = { path = "../lib" }
actix-web = "4.3.1"
actix-files = "0.6.6"
shuttle-actix-web = "0.48.0"
shuttle-runtime = "0.48.0"
tokio = "1.26.0"
shuttle-shared-db = { version = "0.48.0", features = ["postgres", "sqlx"] }
sqlx = { version = "0.8.2", default-features = false, features = [
    "tls-native-tls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "json",
] }
