[package]
name = "cs121-flashcards-app"
version = "0.1.0"
edition = "2021"

[dependencies]
api-lib = { path = "../lib" }
actix-web = "4.3.1"
actix-files = "0.6.6"
actix-cors = "0.7.0"
tokio = "1.26.0"
sqlx = { version = "0.8.2", default-features = false, features = [
    "runtime-async-std",
    "tls-native-tls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "json",
] }
