[package]
name = "cs121-flashcards-app"
version = "0.1.0"
edition = "2021"

[dependencies]
routes = { path = "../routes" }
actix-web = "4.3.1"
actix-files = "0.6.6"
actix-cors = "0.7.0"
clap = { version = "4.0", features = ["derive"] }
tokio = "1.26.0"
sqlx = { version = "0.8.2", default-features = false, features = [
    "runtime-tokio",
    "tls-native-tls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "json",
] }
fern = { version = "0.6.2", features = ["colored"] }
log = "0.4.22"
