[package]
name = "api-lib"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
sqlx = { version = "0.8.2", default-features = false, features = [
    "runtime-tokio",
    "tls-native-tls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "json",
] }
tracing = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1.82"
uuid = { version = "1.3.4", features = ["serde", "v4", "js"] }
chrono = { version = "0.4.38", features = ["serde"] }
