[package]
name = "keiko-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
routes = { path = "../routes" }
clap = { version = "4.0", features = ["derive"] }
tokio = "1.26.0"
sqlx = { version = "0.8.2", default-features = false, features = [
    "runtime-tokio",
    "tls-native-tls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "json",
] }
fern = { version = "0.6.2", features = ["colored"] }
log = "0.4.22"
ntex = { version = "2.7.0", features = ["tokio", "tls-openssl"] }
ntex-cors = "2.0.0"
